objects/Post_Award__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Post Awards</relationshipLabel>
        <relationshipName>Post_Awards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Award_ID__c</fullName>
        <externalId>true</externalId>
        <label>Post Award ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Post Award</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Post Award Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Post Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>